test-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
